--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="second">
         <div class="container">
             <h4>Services</h4>
-            <h1>My Specialties</h1>
+            <!-- <h1>My Specialties</h1> -->
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-lg-8 col-md-12 d-flex align-items-center justify-content-center">
                     <div class="row">
