--- a/projects.html
+++ b/projects.html
@@ -192,6 +192,110 @@
                             class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
                     </div><!--main-end-->
                 </div><!--col-17-end-->
+                  <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/Task-Flow-ToDo-App.png" alt=""> <a href="https://mytaskflow-three.vercel.app/"
+                            target="_blank" class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-18-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/javascript-CRUD.png" alt=""> <a
+                            href="https://javascriptcrud-two.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-19-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/alarm-clock.png" alt=""> <a
+                            href="https://myalarmclock.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-5">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/tttgame.png" alt=""> <a
+                            href="https://tttgame-rho.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-7">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/quizapp.png" alt=""> <a
+                            href="https://myquizapp-beta.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/businesscard (1).png" alt=""> <a
+                            href="https://bcard-nine.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/converter.png" alt=""> <a
+                            href="https://unitconverter-teal.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/nurses-website.png" alt=""> <a
+                            href="https://gnurseg.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-7">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/analogueclock.png" alt=""> <a
+                            href="https://myanalogueclock.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-5">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/music-player.png" alt=""> <a
+                            href="https://mplayer-virid.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/missing-letter-website.png" alt=""> <a
+                            href="https://mlettergame.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/calculator.png" alt=""> <a
+                            href="https://mycalculator-psi.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/multiple-units-converter.png" alt=""> <a
+                            href="https://munitc.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-5">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/multiple-units-converter.png" alt=""> <a
+                            href="https://munitc.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
+                <div class="col-md-6 col-lg-4">
+                    <div class="main" data-aos="zoom-in">
+                        <img src="./Images/multiple-units-converter.png" alt=""> <a
+                            href="https://munitc.vercel.app/" target="_blank"
+                            class="btn btn-md btn-light"><i class="fas fa-eye"></i> Live Preview</a>
+                    </div><!--main-end-->
+                </div><!--col-20-end-->
             </div><!--row-end-->
         </div><!--container-end-->
     </div>
